# Fixer

./: README.md  fixer_requirements.txt  pyproject.toml
src/: evaluate_test_dataset.py  pix2pix_turbo_nocond_cosmos_base_faster_tokenizer.py
src/fixer/: __init__.py  infer.py  inference_pretrained_model.py
